# KnowMe-AI

./: COMPLETE_EXECUTION_GUIDE.md  EXECUTION_GUIDE.md  README.md  ai_cli.py  app.py  docker-compose.yml  document_processor.py  document_processor_new.py  examples.py  main.py  pyproject.toml  requirements.txt  test_activity_integration.py  test_portfolio_integration.py  test_recruitment_integration.py
chroma_db/: chroma.sqlite3
config/: settings.py
src/: main.py  rabbitmq_client_example.py
src/api/: document_routes.py  pdf_routes.py  routes.py
src/config/: settings.py
src/database/: vector_database.py
src/embedding/: embedder.py
src/managers/: __init__.py  activity_manager.py  portfolio_manager.py  recruitment_manager.py
src/models/: activity.py  portfolio.py  recruitment.py
src/queue/: rabbitmq_client.py  task_handlers.py  task_manager.py
src/services/: pdf_service.py  personalized_ai_service.py  recommendation_service.py
src/storage/: minio_client.py
src/task_queue/: rabbitmq_client.py  task_handlers.py  task_manager.py
src/utils/: logger.py  pdf_extractor.py
tests/: test_embedder.py  test_portfolio.py  test_rabbitmq_recommendations.py  test_storage.py  test_vector_database.py
