[project]
name = "knowme-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.10",
    "jupyterlab>=4.4.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.17",
    "notebook>=7.4.2",
    "pdfplumber>=0.11.6",
    "pypdf>=5.5.0",
    "sentence-transformers>=4.1.0",
    "voila>=0.5.8",
]
